Added prototype functions for all endpoints, base url. Added superagent as a dependency for making HTTP requests.

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aneesh Vaidya",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "superagent": "^1.6.1"
+  }
 }
